--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,77 +9,123 @@
             type="org.systers.mentorshipsystem.viewmodel.LoginViewModel"/>
     </data>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="40dp">
+        android:orientation="vertical">
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            app:srcCompat="@drawable/mentorship_system_logo"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_height="160dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.112"
+            app:srcCompat="@drawable/mentorship_system_logo" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/login_username_or_email_label"
             android:id="@+id/loginUsernameInputText"
-            app:errorEnabled="true">
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="292dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:hint="@string/login_username_or_email_label"
+            app:errorEnabled="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.455"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="1.0">
 
-            <EditText
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/login_username_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/login_username_edit_text"
-                android:text="@={vm.inputUsername}"/>
+                android:text="@={vm.inputUsername}" />
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/login_password_label"
             android:id="@+id/loginPasswordInputText"
-            app:errorEnabled="true">
+            android:layout_width="271dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="220dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="@string/login_password_label"
+            app:errorEnabled="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginUsernameInputText"
+            app:layout_constraintVertical_bias="1.0">
 
-            <EditText
+            <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/login_password_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@={vm.inputPassword}"/>
+                android:layout_height="match_parent"
+                android:text="@={vm.inputPassword}" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/login_button"
-            android:text="@string/login"
-            android:layout_gravity="center_horizontal"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="168dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:onClick="@{() -> vm.login() }"
-            style="@style/Widget.AppCompat.Button.Colored" />
+            android:text="@string/login"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputText"
+            app:layout_constraintVertical_bias="0.143" />
 
         <android.support.v7.widget.AppCompatButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/register_button"
-            android:text="@string/register"
-            android:layout_gravity="center_horizontal"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="166dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:onClick="@{() -> vm.goToRegisterScreen() }"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
+            android:text="@string/register"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_button"
+            app:layout_constraintVertical_bias="0.0" />
 
         <android.support.v4.widget.ContentLoadingProgressBar
-            style="?android:attr/progressBarStyleLarge"
             android:id="@+id/loginProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            tools:visibility="visible"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="56dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:visibility="gone"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/register_button"
+            app:layout_constraintVertical_bias="0.241"
+            tools:visibility="visible" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </layout>
