--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:onClick="@{() -> vm.goToRegisterScreen() }"
-            android:text="@string/register"
+            android:text="@string/sign_up"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
