--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ListItemFirstLine">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ListItemSecondLine">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#00000099</item>
+    </style>
+
 </resources>
